[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apc-ups-security-auditor"
version = "0.1.0"
description = "Automated default-credential detection and password hardening for APC UPS NMC3 using Playwright."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Bruno Teixeira" }
]
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.47.0"
]

[project.urls]
Homepage = "https://github.com/<o_teu_utilizador>/apc-ups-security-auditor"

[project.scripts]
apc-ups-audit = "apc_ups_security_auditor.cli:main"
